Record and display the origin of each eval run
